css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */

body {
    font: 16px/26px Helvetica, Helvetica Neue, Arial;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
    text-align: center;
}


/* ==============
    MOBILE: Main
   ============== */

/*.main {
    padding: 30px 0;
}*/


.footer-container footer {
    font-size: 9px;
    letter-spacing: 1px;
    text-transform: uppercase;
    padding: 20px 0;
}

.footer-container footer h3 {
    font-weight: normal;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

.insta{
    max-width: none;
    width: 100%;
}

#logo {
    margin: 50px auto;
    max-width: 125px;
}

#email-signup {
    display: block;
    margin: 50px auto;
    text-transform: uppercase;
    width: 100%;
    min-width: none;
}

#email-signup form {
    font-size: .7em;
    margin: 0;
    padding: 0;
}

#email-input {
    border: 4px solid #000;
    height: 30px;
    display: inline;
    letter-spacing: 1px;
    margin-right: -5px;
    width: 70%;
}

#submit-button {
    background-color: #000;
    border: none;
    color: #fff;
    display: inline;
    font-weight: bold;
    height: 40px;
    letter-spacing: 1px;
    padding: 5px 0;
    width: 20%;
}

.social {
    margin: 0 20px;
    max-width: 40px;
}

#contact-email {
    color: #000;
    display: block;
    font-size: .7em;
    margin: 40px 0 0 0;
    letter-spacing: 1px;
    text-transform: uppercase;
}

#contact-email a, a:active, a:visited, a:hover {
    color: #000;
}

textarea,
input[type="text"],
input[type="button"],
input[type="submit"] {
     -webkit-appearance: none;
     border-radius: 0;
}











/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 480px) {

/* ====================
    
   ==================== */


}

@media only screen and (min-width: 768px) {


/* ============
    INTERMEDIATE: Email Sign-Up Form
   ============ */

   #email-input {
        width: 70%;
    }

    #email-signup {
        display: block;
        width: 40%;
        min-width: 395px;
    }

/* ============
    INTERMEDIATE: Featured Instagram Image
   ============ */

   .insta {
        max-width: 450px;
    }

}

@media only screen and (min-width: 1140px) {

/* ===============
    Maximal Width
   =============== */

    .wrapper {
        width: 1000px; /* 1140px - 10% for margins */
        margin: 0 auto;
    }
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

.center-img {
    display:block;
    margin: auto;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

